Changelog
=========

1.5.1 (unreleased)
------------------

- Fix test suite. [mbaechtold]


1.5.0 (2016-12-30)
------------------

- Fix statusmap view when being called on an inactive content. [mbaechtold]


1.4.0 (2016-12-29)
------------------

- Drop support for Plone 4.2.
  Only Plone 4.3 is supported now. [mbaechtold]


1.3.0 (2016-05-20)
------------------

- Support ftw.lawgiver status translations. [jone]

- Drop Plone 4.1 support.
  [elioschmutz]

- Adds an IConstraintChecker utility to register constraint checks before
  transition execution.
  [elioschmutz]


1.2.2 (2016-02-24)
------------------

- Do not show statusmap link on plone root.
  [mathias.leimgruber]


1.2.1 (2015-12-07)
------------------

- Display the human readable title of the transitions and states instead
  of their id (this is useful if you have ftw.upgrade >= 1.6.2 installed).
  [mbaechtold]


1.2.0 (2015-09-30)
------------------

- Add old and new state to the transitions-listing
  [elioschmutz]

- Fix status message type.
  [mbaechtold]

- Fix portal type title when deviates from FTI id.
  [jone]

- Fix contenttype icons by normalizing class.
  [jone]


1.1.1 (2014-05-01)
------------------

- Fix JavaScript issues - use jQuery properly.
  [jone]


1.1 (2013-05-24)
----------------

- Translate portal type names with its own i18n domain.
  [mathias.leimgruber]

- Fix item order - sort on path.
  [mathias.leimgruber]


1.0 (2013-01-09)
----------------

- Implementation of basic features.